--- a/style.css
+++ b/style.css
@@ -1,11 +1,19 @@
 @import url(/styles/header.css);
+@import url(/styles/banner.css);
 
 :root {
   --cor-de-fundo: #ebecee;
+  --laranja: #eb9b00;
+  --azul-degrade: linear-gradient(98deg, #002f52 35.49%, #326589 165.37%);
+  --fonte-principal: "Poppins";
+  --lista-menu-boxshadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.25);
 }
 
 body {
   background-color: var(--cor-de-fundo);
+  font-family: var(--fonte-principal);
+  font-weight: 400;
+  font-size: 1em;
 }
 
 
