--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url(/styles/header.css);
 @import url(/styles/banner.css);
+@import url(/styles/carrossel.css);
 
 :root {
   --cor-de-fundo: #ebecee;
@@ -15,5 +16,3 @@ body {
   font-weight: 400;
   font-size: 1em;
 }
-
-
