--- a/styles/banner.css
+++ b/styles/banner.css
@@ -11,8 +11,8 @@
 }
 
 .banner__texto {
-  font-weight: 500;
-  margin: 1em 1em;
+  margin: 1em;
+  line-height: 20px;
 }
 
 .banner__pesquisa {
@@ -22,7 +22,6 @@
   padding: 0.625em 1.5em;
   border-radius: 24px;
   width: 100%;
-  
 }
 
 .banner__pesquisa::placeholder {
