--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
 @import url(/styles/header.css);
 @import url(/styles/banner.css);
 @import url(/styles/carrossel.css);
-@import url(/styles/card.css);
+
 @import url(reset.css);
 
 :root {
   --cor-de-fundo: #ebecee;
   --laranja: #eb9b00;
+  --roxo: #002F52;
   --azul-degrade: linear-gradient(98deg, #002f52 35.49%, #326589 165.37%);
   --fonte-principal: "Poppins";
   --lista-menu-boxshadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.25);
+  --card-boxshadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 body {
