--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -1,3 +1,30 @@
 .tópicos {
-    
+  background: var(--azul-degrade);
+  text-align: center;
+  padding: 1em 0;
+}
+
+.tópicos__titulo {
+  color: white;
+  font-weight: 300;
+  padding: 1em 0;
+}
+
+.tópicos__lista {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.tópicos__item {
+  margin: 2em 0.5em;
+}
+
+.tópicos__link {
+  font-size: 0.875em;
+  font-weight: 700;
+  text-decoration: none;
+  background-color: var(--laranja);
+  color: white;
+  padding: 1em 1.4em;
 }
