--- a/styles/contato.css
+++ b/styles/contato.css
@@ -1,14 +1,41 @@
 .contato {
-    background-color: var(--cor-de-fundo);
-    padding: 1.5em;
+  background-color: var(--cor-de-fundo);
+  padding: 1.5em;
 }
 
 .contato__titulo {
-    color: var(--azul);
-    font-size: 1.125em;
-    font-weight: 500;
+  font-size: 1.125em;
+  font-weight: 500;
 }
 
 .contato__texto {
-    font-weight: 300;
+  font-weight: 300;
+  margin: 1em 0;
+}
+
+.contato__titulo,
+.contato__texto {
+  background: var(--azul-degrade);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.contato__email {
+  width: 90%;
+  padding: 0.625em 1.5em;
+  border-radius: 24px;
+  border: 1px solid var(--azul);
+  color: var(--azul);
+}
+
+.contato__email::placeholder {
+  padding-left: 2em;
+  color: var(--azul);
+  font-size: 16px;
+  font-weight: 400;
+  font-family: var(--fonte-principal);
+
+  background: url(../assets/Email.svg) no-repeat;
+  background-position: left center;
 }
