--- a/style.css
+++ b/style.css
@@ -3,13 +3,12 @@
 @import url(/styles/carrossel.css);
 @import url(/styles/topicos.css);
 @import url(/styles/contato.css);
-@import url(/styles/footer);
-
+@import url(/styles/footer.css);
 
 :root {
   --cor-de-fundo: #ebecee;
   --laranja: #eb9b00;
-  --azul: #002F52;
+  --azul: #002f52;
   --azul-degrade: linear-gradient(98deg, #002f52 35.49%, #326589 165.37%);
   --fonte-principal: "Poppins";
   --lista-menu-boxshadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.25);
