--- a/styles/banner.css
+++ b/styles/banner.css
@@ -22,6 +22,7 @@
   padding: 0.625em 1.5em;
   border-radius: 24px;
   width: 100%;
+  max-width: 380px;
 }
 
 .banner__pesquisa::placeholder {
@@ -31,5 +32,37 @@
   text-align: center;
   color: white;
   background: url(../assets/Lupa.svg) no-repeat;
-  background-position: 1em;
+  background-position: 1em center ;
+}
+
+
+@media screen and (min-width: 768px) {
+  .banner {
+    padding: 4em;
+  }
+
+  .banner__titulo {
+    font-size: 2.25em;
+  }
+
+  .banner__texto{
+    margin: 1em 0 1.5em 0;
+    font-weight: 500;
+  }
+
+  .banner__pesquisa {
+    max-width: 476px;
+    padding: 1.5em 5em;
+  }
+
+  .banner__pesquisa::placeholder{
+    font-size: 1em;
+  }
+  
+}
+
+@media screen and (min-width: 1728px){
+  .banner__pesquisa {
+    max-width: 586px;
+  }
 }
