--- a/styles/footer.css
+++ b/styles/footer.css
@@ -7,24 +7,12 @@
   display: none;
 }
 
-.lista__nome {
-  color: var(--cinza);
-  font-size: 0.875em;
-  text-transform: uppercase;
-  margin-bottom: 1.5em;
-}
-
-.lista__texto {
-  color: #474646;
-  font-size: 0.875em;
-}
-
 @media screen and (min-width: 1024px) {
   .rodapé {
     margin: 2em 0;
+    padding: 2em;
     display: flex;
     justify-content: space-between;
-    
   }
 
   .rodapé__titulo {
@@ -35,10 +23,26 @@
     display: block;
   }
 
+  .lista__nome {
+    color: var(--cinza);
+    font-size: 0.875em;
+    text-transform: uppercase;
+    margin-bottom: 1.5em;
+  }
+
   .lista__item {
+    padding: 0.5em;
+  }
+
+  .lista__link {
     display: flex;
     align-items: center;
-    padding: 0.5em;
+    text-decoration: none;
     gap: 10px;
+  }
+
+  .lista__link__texto {
+    color: #474646;
+    font-size: 0.875em;
   }
 }
