--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,7 +1,7 @@
 .banner {
   text-align: center;
   color: white;
-  padding: 2em 1.5em;
+  padding: 2em 0;
   background: var(--azul-degrade);
 }
 
@@ -32,12 +32,12 @@
   text-align: center;
   color: white;
   background: url(../assets/Lupa.svg) no-repeat;
-  background-position: 1em center;
+  background-position: 2em;
 }
 
 @media screen and (min-width: 768px) {
   .banner {
-    padding: 4em;
+    padding: 4em 0;
   }
 
   .banner__titulo {
@@ -51,16 +51,25 @@
 
   .banner__pesquisa {
     max-width: 476px;
-    padding: 1.5em 5em;
+    padding: 1.5em 1em;
   }
 
   .banner__pesquisa::placeholder {
     font-size: 1em;
+    background-position: 6em;
   }
 }
 
 @media screen and (min-width: 1728px) {
   .banner__pesquisa {
     max-width: 586px;
+  }
+
+  .banner {
+    padding: 6em 0;
+  }
+
+  .banner__pesquisa::placeholder {
+    background-position: 10em;
   }
 }
