--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -1,8 +1,10 @@
 .tópicos {
-  margin-top: 2em;
+  display: flex;
+  justify-content: center;
+  margin-top: 3em;
   background: var(--azul-degrade);
   text-align: center;
-  padding: 1em 0;
+  padding-bottom: 1em;
 }
 
 .tópicos__titulo {
@@ -30,9 +32,24 @@
   padding: 1em 1.4em;
 }
 
+@media screen and (min-width: 768px) {
+  .tópicos__container {
+    width: 80%;
+  }
+
+  .tópicos {
+    padding-bottom: 1em;
+  }
+}
+
 @media screen and (min-width: 1024px) {
   .tópicos {
-    margin-top: 3em;
+    margin-top: 4em;
+    padding-bottom: 4em;
+  }
+
+  .tópicos__container {
+    width: 80%;
   }
 
   .tópicos__titulo {
@@ -41,10 +58,34 @@
   }
 
   .tópicos__item {
-    margin: 2.5em 1em;
+    margin: 2.5em 1.5em;
   }
 
   .tópicos__link {
     font-size: 1.5em;
+  }
+}
+
+@media screen and (min-width: 1728px) {
+  .tópicos {
+    margin-top: 5em;
+    padding-bottom: 4em;
+  }
+
+  .tópicos__container {
+    width: 70%;
+  }
+
+  .tópicos__titulo {
+    font-size: 2em;
+    padding: 2em 0 1.5em 0;
+  }
+
+  .tópicos__item {
+    margin: 3.5em 1.5em;
+  }
+
+  .tópicos__link {
+    padding: 1.5em 2em;
   }
 }
