--- a/styles/contato.css
+++ b/styles/contato.css
@@ -30,14 +30,13 @@
 }
 
 .contato__email::placeholder {
-  padding-left: 2em;
+  padding-left: 3em;
   color: var(--azul);
   font-size: 16px;
   font-weight: 400;
   font-family: var(--fonte-principal);
-
   background: url(../assets/Email.svg) no-repeat;
-  background-position: left center;
+  background-position: 1em;
 }
 
 @media screen and (min-width: 1024px) {
@@ -75,9 +74,8 @@
     width: 40%;
   }
 
-  .contato__email{
+  .contato__email {
     width: 40%;
     margin-right: 0;
   }
-
 }
