--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -32,6 +32,11 @@
   padding: 1em 1.4em;
 }
 
+.tópicos__link:hover {
+  color: var(--laranja);
+  background-color: var(--branco);
+}
+
 @media screen and (min-width: 768px) {
   .tópicos__container {
     width: 80%;
