--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -75,6 +75,10 @@
   padding: 1em 2.15em;
 }
 
+.botões__ancora:active {
+  background-color: var(--azul);
+}
+
 @media screen and (min-width: 1024px) {
   .carrossel__titulo {
     font-size: 1.625em;
