--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -81,8 +81,10 @@
 }
 
 @media screen and (min-width: 1024px) {
+
   .carrossel__titulo {
     font-size: 1.625em;
+    background-color: #fcfcfc;
   }
 
   .swiper-pagination {
