--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@
 @import url(styles/topicos.css);
 
 :root {
-  --cor-de-fundo: #ebecee;
+  --cor-de-fundo: #fcfcfc;
+
   --laranja: #eb9b00;
   --azul: #002f52;
   --cinza: #858585;
@@ -21,4 +22,10 @@ body {
   font-family: var(--fonte-principal);
   font-weight: 400;
   font-size: 1em;
+}
+
+@media screen and (min-width: 1024px) {
+  body {
+    background-color: #fcfcfc;
+  }
 }
